La till bilder för mina projekt

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <div class="project-container">
 
           <div class="projects-link">
-            <a href="/Internets-historia/index.html"><img src="picture/internets_historia.png" alt="Internets historia printscreen">
+            <a href="/Internets-historia/index.html"><img src="picture/printScreen-internetHistory.png" alt="Internets historia printscreen">
             <figcaption>Internets historia</figcaption></a>
 
             <div class="logo-used">
@@ -138,7 +138,7 @@
           </div>
 
           <div class="projects-link">
-            <a href="https://www.figma.com/proto/AqIbssmRS99oocffwcSChH/431-511-Prototyp---Konditoriets-mobilanpassade-webbsida?node-id=44-91&starting-point-node-id=44%3A91&scaling=scale-down&content-scaling=responsive&t=K1fD9MdnDPIo2oYg-1" target="_blank"><img src="picture/konditori3_figma.png" alt="Figma prototyp" title="Konditori Figma-prototyp">
+            <a href="https://www.figma.com/proto/AqIbssmRS99oocffwcSChH/431-511-Prototyp---Konditoriets-mobilanpassade-webbsida?node-id=44-91&starting-point-node-id=44%3A91&scaling=scale-down&content-scaling=responsive&t=K1fD9MdnDPIo2oYg-1" target="_blank"><img src="picture/printScreen-Figma.png" alt="Figma prototyp" title="Konditori Figma-prototyp">
             <figcaption>Figma skiss konditori</figcaption></a>
 
             <div class="logo-used">
@@ -147,7 +147,7 @@
           </div>
 
           <div class="projects-link">
-            <a href="#"><img src="/picture/example-picture.jpg" alt="Golfklubb grupprojekt">
+            <a href="#"><img src="/picture/printScreen - Golfklubb.png" alt="Golfklubb grupprojekt">
             <figcaption>Tuc Golfklubb (Grupprojekt)</figcaption></a>
 
             <div class="logo-used">
