-Länkning -Gradient -Kontaktformulär

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <ul class="navMeny">
         <li><a href="index.html">HEM</a></li>
         <li><a href="#section-aboutme">OM MIG</a></li>
-        <li><a href="minaprojekt.html">MINA PROJEKT</a></li>
+        <li><a href="#project-section">MINA PROJEKT</a></li>
         <li><a href="/kod-html/hem/Index.html" target="_blank">GRUPPROJEKT GOLFKLUBB</a></li>
       </ul>
     </div>
@@ -58,16 +58,16 @@
       <div class="content-boxes">
 
         <figure class="figure_1">
-          <a href=""><img src="picture/tek_industry.jpg" alt="tech_infrastructure"><h2>My projects</h2></a>
+          <a href="#project-section"><img src="picture/tek_industry.jpg" alt="tech_infrastructure"><h2>My projects</h2></a>
         </figure>
 
         <figure class="figure_2">
-          <a href=""><img src="picture/elliptical.evighet.png" alt="Forever tech"><h2>My skills</h2></a>
+          <a href="#programmes-section"><img src="picture/elliptical.evighet.png" alt="Forever tech"><h2>My skills</h2></a>
         </figure>
 
       </div>
       
-      <div class="programmes-section">
+      <div class="programmes-section" id="programmes-section">
         <h1>Technical knowledge</h1>
 
         <div class="logo-programmes">
@@ -121,7 +121,7 @@
         </div>
       </div>
 
-      <div class="project-section">
+      <div class="project-section" id="project-section">
         <h1>Mina projekt</h1>
         <button class="carusell-arrow left" id="scrollLeft">&#10094;</button>
 
@@ -157,17 +157,17 @@
           </div>
 
           <div class="projects-link">
-            <a href="#"><img src="/picture/blurred_glass.jpg" alt="Biblioteksystem">
+            <a href="#"><img src="#" alt="Biblioteksystem">
             <figcaption>Biblioteksystem</figcaption></a>
 
             <div class="logo-used">
               <img src="/picture/cSharp_logo.png" alt="C#">
-              <img src="" alt="">
+              <img src="/picture/database.png" alt="SQL">
             </div>
           </div>
 
           <div class="projects-link">
-            <a href="#"><img src="/picture/hex_background.jpg" alt="Memoryspel">
+            <a href="#"><img src="/picture/printScreen - memorygame.png" alt="Memoryspel">
             <figcaption>Memoryspel</figcaption></a>
 
             <div class="logo-used">
