--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <div class="about-me-section">
       <div class="welcome-text">
-        <h1 id="section-aboutme">A little something about me</h1>
+        <h1 id="section-aboutme">About me</h1>
         <p>An aspiring web developer located in Stockholm currently honing my skills and 
           learning everything there is to know about building great websites. My strengths lie in my 
           attention to detail, curiosity, and a good eye for design. I’m passionate about continuous
@@ -100,7 +100,7 @@
           </figure>
 
           <figure>
-            <img src="picture/javascript-fixad.webp" alt="Javascript_picture" id="js-logo">
+            <img src="picture/javascript_logo.png" alt="Javascript_picture" id="js-logo">
             <a href="#" class="toggle"><figcaption>Javascript <span class="arrow fa-solid fa-chevron-down"></span></figcaption></a>
               <div class="content" class="hidden">
                 <p>I have completed an introductory course in JavaScript, where I learned the basics of making websites interactive and dynamic. During the course, we practiced adding functionality to web pages, such as building a memory game and implementing features like adding products to a shopping cart. This gave me a strong foundation in using JavaScript to enhance the user experience.</p>
@@ -151,7 +151,7 @@
           </div>
 
           <div class="projects-link">
-            <a href="#"><img src="/picture/printScreen - Golfklubb.png" alt="Golfklubb grupprojekt">
+            <a href="/kod-html/hem/Index.html"><img src="/picture/printScreen - Golfklubb.png" alt="Golfklubb grupprojekt">
             <figcaption>Tuc Golfklubb (Grupprojekt)</figcaption></a>
 
             <div class="logo-used">
@@ -171,11 +171,11 @@
           </div>
 
           <div class="projects-link">
-            <a href="#"><img src="/picture/printScreen - memorygame.png" alt="Memoryspel">
+            <a href="/SpeletJS-main/index.html"><img src="/picture/printScreen - memorygame.png" alt="Memoryspel">
             <figcaption>Memoryspel</figcaption></a>
 
             <div class="logo-used">
-              <img src="/picture/javascript-fixad.webp" alt="Javascript-logo">
+              <img src="/picture/javascript_logo.png" alt="Javascript-logo">
             </div>
           </div>
         </div>
@@ -219,7 +219,7 @@
         <ul>
           <li><a href="https://www.linkedin.com/in/emilia-almgren-705789340/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
           <li><a href="https://www.facebook.com/emilia.almgren.1" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
-          <li><a href="instagram.se" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+          <li><a href="https://www.instagram.com/emilia_almgren?igsh=ZWRxM2tjd29pZXky&utm_source=qr" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
           <li><a href="https://www.github.com/Emiliaalmgren" target="_blank"><i class="fa-brands fa-github"></i></a></li>
         </ul>
         <hr>
