--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
           </div>
 
           <div class="projects-link">
-            <a href="#"><img src="#" alt="Biblioteksystem">
+            <a href="#"><img src="picture/printScreen_bibliotekssystem.png" alt="Biblioteksystem">
             <figcaption>Biblioteksystem</figcaption></a>
 
             <div class="logo-used">
