--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
 
     <div class="headerPicture">
-      <video autoplay loop muted style="width: 100%; height: 100%; object-fit: cover;">
+      <video autoplay loop muted playsinline preload="auto" style="width: 100%; height: 100%; object-fit: cover;">
         <source src="picture/earth_spins.mp4" type="video/mp4">
         Din webbläsare stödjer inte videouppspelning.
       </video>
